# COOLEST

./: .coveragerc  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CITATION.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  OLD_HISTORY.md  README.md  pyproject.toml  requirements.txt  requirements_docs.txt  requirements_tests.txt  setup.cfg  setup.py  test_einstein_rad.ipynb  test_requirements.txt
.github/workflows/: ci-tests.yml  ci_tests.yml  draft-pdf.yml  publish-package.yml  publish-to-pypi.yml  publish-to-testpypi.yml  python-package.yml
coolest/: __init__.py
coolest/api/: README.md  analysis.py  composable_models.py  coordinates.py  corner.py  light_model.py  plot_irregular_grid.py  plot_util.py  plotting.py  test_einstein_rad.ipynb  util.py
coolest/template/: info.py  io.py  json.py  lazy.py  standard.py  validation.py
docs/: .readthedocs.yaml  CNAME  bib.rst  build_the_doc  conf.py  conventions.md  index.md  refs.bib
docs/_static/: custom.css
example_case/: api_input_file_JSON.json
examples/: all_mass_profiles.json  arc_mask.fits  coolest_template.json  coolest_template_pyAPI.json  generate_all_profiles.py  generate_template.py  test_irreg_grid.fits  test_psf.fits
images/: generate_logo.ipynb
joss/: paper.bib  paper.md  paper_figure.ipynb
lensmodelapi/: light_profile.py  parameter.py  redshift.py
python/: all_light_profiles.json  api_input_file.json  api_input_file.yaml  api_input_file_JSON.json  api_input_file_JSON_pyAPI.json  api_obs_file_JSON.json  example_load_input_file.ipynb  test_api.py
test/: test_image.fits
(+262 files in other folders)
