[metadata]
name = coolest
version = attr: coolest.VERSION
author = Aymeric Galan & COOLEST contributors
description = Standard for Strong Gravitational Lensing Analyses
long_description = file: README.md, HISTORY.md, LICENSE.md
license = BSD-3-Clause
url = https://github.com/aymgal/coolest
keywords = coolest, lensing, gravitation, astrophysics
project_urls =
	Documentation = https://coolest.readthedocs.io/
	Changelog = https://github.com/aymgal/COOLEST/blob/main/HISTORY.md
