[metadata]
name = coolest
version = attr: coolest.VERSION
author = Aymeric Galan & COOLEST contributors
description = Standard for Strong Gravitational Lensing Analyses
license = BSD-3-Clause
url = https://github.com/aymgal/coolest
keywords = coolest, lensing, gravitation, astrophysics
project_urls =
	Documentation = https://coolest.readthedocs.io/
	Changelog = https://github.com/aymgal/COOLEST/releases
